[package]
name = "POPcat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = { version = "0.18", features = ["web_sys"] }
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ["HtmlAudioElement"] }
js-sys = "0.3.55"
gloo-console = "0.1.0"
